# nhldata

./: setup.cfg
src/: data.py
src/nhldata/: core.py  data.py  id.py  nhl_api.py
tests/unit/: test_Api.py  test_find_game_ids.py  test_id.py  test_nhl_api.py
