[metadata]
name = nhldata
version = 0.1.0
description = Easily get NHL API data in a pandas dataframe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-bot1/nhldata
author = Jon Butt
author_email = jon.d.butt@gmail.com
requires-python = ">=3.10"
keywords = nhl, api, pandas
license = GGNU GPLv3
license_files = LICENSE
classifiers =
    Programing Launguage :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 2 - Pre-Alpha
project_urls=
    Source = https://github.com/j-bot1/nhldata
    Tracker = https://github.com/j-bot1/nhldata/issues

[options]
package_dir=
    =src
packages=find:
setup_requires =
    setuptools_scm
install_requires =
    pandas >= "1.5.2"
    requests >= "2.28.1"
    python_version >= "3.10"
tests_require =
    pytest >= "7.2.0"
    respones >= "0.22.0"

[options.packages.find]
where=src
